[package]
name = "hyper-custom-tls"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38" }
hyper = { version = "1" }
hyper-util = { version = "0.1", features = ["full"] }
hyper-rustls = { version = "0.27", features = ["http2", "logging", "ring", "tls12"], default-features = false }
rustls = "0.23"
rustls-pemfile = "2.1"
sha2 = "0.10"
rsa = { version = "0.9", features = ["pkcs5", "sha1", "sha2"] }
rustls-webpki = "0.102"
log = "0.4"

[dev-dependencies]
http-body-util = "0.1"
tokio = { version = "1.38", features = ["macros"] }

